Draco armor shield requires module and energy